--- a/hoangthixa.toml
+++ b/hoangthixa.toml
@@ -24,3 +24,6 @@
 line_length: false # Ignore excessively long lines
 no-duplicate-heading: false # This is useful in RELEASES.md
 no-inline-html: false # Needed to create complex tables
+Heckingbottom's scheduled news conference was cancelled on Monday, with the club set to hold one at 13:30 GMT today, to preview Wednesday's home game with Liverpool.
+
+
